pushing the event logging code

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1666,6 +1666,7 @@
       "viewScrapSale": "View Scrap Sale",
       "editScrapSale": "Edit Scrap Sale",
       "deleteScrapSale": "Delete Scrap Sale",
+      "deleteScrapSales": "Delete Scrap Sales",
       "failedToLoadScrapSales": "Failed to load scrap sales",
       "deleteFunctionalityToBeImplemented": "Delete functionality to be implemented",
       "completed": "Completed",
@@ -1676,11 +1677,11 @@
       "scrapSalesLoadedSuccessfully": "Scrap sales loaded successfully",
       "failedToFetchScrapSales": "Failed to fetch scrap sales",
       "scrapSaleDeletedSuccessfully": "Scrap sale deleted successfully",
-      "failedToDeleteScrapSale": "Failed to delete scrap sale",
+      "errorDeletingScrapSale": "Error deleting scrap sale",
       "pleaseSelectScrapSalesToDelete": "Please select scrap sales to delete",
       "confirmDeleteScrapSales": "Are you sure you want to delete the selected scrap sales?",
-      "scrapSalesDeletedSuccessfully": "Scrap sales deleted successfully",
-      "failedToDeleteScrapSales": "Failed to delete scrap sales",
+      "scrapSalesDeletedSuccessfully": "{{count}} scrap sales deleted successfully",
+      "errorDeletingScrapSales": "Error deleting {{count}} scrap sales",
       "createScrapSale": "Create Scrap Sale",
       "selectAssetsAndConfigureDetails": "Select assets and configure scrap sale details",
       "selectAssetTypes": "Select Asset Types",
