cost filed in supervisor screen

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -1339,11 +1339,13 @@
     "selectStatus": "Status auswählen",
     "poNumber": "Bestellnummer",
     "invoice": "Rechnung",
+    "costOfMaintenance": "Wartungskosten",
     "enterTechnicianName": "Technikername eingeben",
     "enterTechnicianPhone": "Technikertelefon eingeben",
     "enterPONumber": "Bestellnummer eingeben",
     "enterInvoiceNumber": "Rechnungsnummer eingeben",
     "enterTechnicianEmail": "Techniker-E-Mail eingeben",
+    "enterCost": "Wartungskosten eingeben",
     "enterAdditionalNotes": "Zusätzliche Notizen eingeben...",
     "cancel": "Abbrechen",
     "submit": "Absenden",
@@ -1372,6 +1374,7 @@
     "imagesUploadedFailed": "{{successCount}} Bilder hochgeladen, {{failCount}} fehlgeschlagen",
     "failedToUploadAnyImages": "Fehler beim Hochladen aller Bilder",
     "statusIsRequired": "Status ist erforderlich",
+    "costIsRequired": "Wartungskosten sind erforderlich",
     "maintenanceScheduleUpdatedSuccessfully": "Wartungsplan erfolgreich aktualisiert!",
     "failedToUpdateMaintenanceSchedule": "Fehler beim Aktualisieren des Wartungsplans"
   },
