breakdown BF02 with and without workflow implemented

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1106,6 +1106,7 @@
     "startDate": "Start Date",
     "status": "Status",
     "assetType": "Asset Type",
+    "notSet": "Not Set",
     "failedToFetchWorkOrders": "Failed to fetch work orders",
     "noWorkOrdersFound": "No work orders found",
     "loadingWorkOrders": "Loading work orders...",
