Add subdomain-based multi-tenant frontend with SLA reports and tenant setup

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -37,7 +37,8 @@
     "assetValuation": "Asset Valuation",
     "assetWorkflowHistory": "Asset Workflow History",
     "breakdownHistory": "Breakdown History",
-    "usageBasedAssetReport": "Usage-Based Asset Report"
+    "usageBasedAssetReport": "Usage-Based Asset Report",
+    "slaReport": "SLA Reports"
   },
   "dashboard": {
     "title": "Dashboard",
