--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -73,7 +73,10 @@
     "maintenanceAndDecommissioned": "Maintenance + Decommissioned",
     "allThree": "All Three Categories",
     "assetsNotInCategories": "Assets not in any category",
-    "breakdownNote": "These assets are unassigned, not under maintenance, and not decommissioned."
+    "breakdownNote": "These assets are unassigned, not under maintenance, and not decommissioned.",
+    "vendorContractRenewal": "Vendor Contract Renewal",
+    "triggerVendorRenewal": "Trigger Vendor Renewal",
+    "vendorContractRenewalDescription": "Checks vendor contracts ending within 10 days and creates renewal workflows"
   },
   "assets": {
     "title": "Assets",
