updating the latest code

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -401,6 +401,7 @@
     "scrapAssetsValue": "Wert der Schrottanlagen",
     "totalPortfolioValue": "Gesamtwert des Portfolios",
     "averageAssetValue": "Durchschnittlicher Anlagenwert",
+    "currentValueAfterDepreciation": "Aktueller Wert nach Abschreibung",
     "activeAssets": "aktive Anlagen",
     "disposedAssets": "entsorgte Anlagen",
     "totalAssets": "Anlagen insgesamt",
@@ -414,6 +415,7 @@
     "scrapAssetsValueLabel": "Wert der Schrottanlagen",
     "totalPortfolioValueLabel": "Gesamtwert des Portfolios",
     "averageAssetValueLabel": "Durchschnittlicher Anlagenwert",
+    "currentValueAfterDepreciationLabel": "Aktueller Wert nach Abschreibung",
     "page": "Seite",
     "of": "von",
     "noReportData": "Keine Berichtsdaten",
