--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -8,6 +8,7 @@
       "vendors": "Vendors",
       "users": "Users",
       "userRoles": "User Roles",
+      "columnAccessConfig": "Column Access Config",
       "bulkUpload": "Bulk Upload",
       "roles": "Roles",
     "reports": "Reports",
@@ -422,6 +423,7 @@
     "scrapAssetsValue": "Scrap Assets Value",
     "totalPortfolioValue": "Total Portfolio Value",
     "averageAssetValue": "Average Asset Value",
+    "currentValueAfterDepreciation": "Current Value After Depreciation",
     "activeAssets": "active assets",
     "disposedAssets": "disposed assets",
     "totalAssets": "total assets",
@@ -435,6 +437,7 @@
     "scrapAssetsValueLabel": "Scrap Assets Value",
     "totalPortfolioValueLabel": "Total Portfolio Value",
     "averageAssetValueLabel": "Average Asset Value",
+    "currentValueAfterDepreciationLabel": "Current Value After Depreciation",
     "page": "Page",
     "of": "of",
     "noReportData": "No Report Data",
