--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -275,6 +275,12 @@
     "selectMaintenanceTypeOption": "Wartungstyp auswählen",
     "maintenanceLeadType": "Wartungsleiter-Typ",
     "enterMaintenanceLeadType": "Wartungsleiter-Typ eingeben",
+    "maintenanceFrequency": "Wartungshäufigkeit",
+    "enterMaintenanceFrequency": "Häufigkeit eingeben (z.B. 30, 90, 180)",
+    "unitOfMeasure": "Maßeinheit (UOM)",
+    "selectUOM": "Maßeinheit auswählen",
+    "pleaseEnterValidMaintenanceFrequency": "Bitte geben Sie eine gültige Wartungshäufigkeit ein",
+    "pleaseSelectUOM": "Bitte wählen Sie eine Maßeinheit (UOM) aus",
     "docUpload": "Dokument-Upload",
     "addDocument": "Dokument hinzufügen",
     "noChecklistDocuments": "Keine Checklisten-Dokumente hinzugefügt.",
