--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -296,6 +296,12 @@
     "selectMaintenanceTypeOption": "Select maintenance type",
     "maintenanceLeadType": "Maintenance Lead Time",
     "enterMaintenanceLeadType": "Enter maintenance lead type",
+    "maintenanceFrequency": "Maintenance Frequency",
+    "enterMaintenanceFrequency": "Enter frequency (e.g., 30, 90, 180)",
+    "unitOfMeasure": "Unit Of Measure (UOM)",
+    "selectUOM": "Select UOM",
+    "pleaseEnterValidMaintenanceFrequency": "Please enter a valid maintenance frequency",
+    "pleaseSelectUOM": "Please select Unit of Measure (UOM)",
     "docUpload": "Doc Upload",
     "addDocument": "Add Document",
     "noChecklistDocuments": "No checklist documents added.",
