adding all code

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -212,7 +212,19 @@
     "searchByNameOrId": "Nach Name oder ID suchen...",
     "enterSerialNumber": "Seriennummer eingeben",
     "child": "Untergeordnet",
-    "parent": "Übergeordnet"
+    "parent": "Übergeordnet",
+    "pleaseFillAllRequiredFields": "Bitte füllen Sie alle erforderlichen Felder aus",
+    "assetTypeIsRequired": "Anlagentyp ist erforderlich",
+    "serialNumberIsRequired": "Seriennummer ist erforderlich",
+    "purchaseDateIsRequired": "Kaufdatum ist erforderlich",
+    "purchaseCostIsRequired": "Kaufpreis ist erforderlich",
+    "parentAssetIsRequired": "Übergeordnete Anlage ist erforderlich",
+    "purchaseByIsRequired": "Gekauft von ist erforderlich",
+    "expiryDateIsRequired": "Ablaufdatum ist erforderlich",
+    "expiryDateCannotBeSameAsPurchaseDate": "Ablaufdatum darf nicht dasselbe wie das Kaufdatum sein",
+    "expiryDateCannotBeBeforePurchaseDate": "Ablaufdatum darf nicht vor dem Kaufdatum liegen",
+    "purchaseDateCannotBeSameAsExpiryDate": "Kaufdatum darf nicht dasselbe wie das Ablaufdatum sein",
+    "atLeastOneVendorRequired": "Mindestens ein Lieferant (Produkt oder Service) ist erforderlich"
   },
   "assetTypes": {
     "title": "Anlagentypen",
@@ -408,6 +420,18 @@
     "totalPortfolioValue": "Gesamtwert des Portfolios",
     "averageAssetValue": "Durchschnittlicher Anlagenwert",
     "currentValueAfterDepreciation": "Aktueller Wert nach Abschreibung",
+    "currentValueByAssetType": "Aktueller Wert nach Anlagentyp",
+    "valueAfterDepreciationByAssetType": "Wert nach Abschreibung nach Anlagentyp",
+    "currentValue": "Aktueller Wert",
+    "valueAfterDepreciation": "Wert nach Abschreibung",
+    "assetsByAssetType": "Anlagen nach Anlagentyp",
+    "totalCurrentValue": "Gesamter aktueller Wert",
+    "totalValueAfterDepreciation": "Gesamter Wert nach Abschreibung",
+    "averageValueAfterDepreciation": "Durchschnittlicher Wert nach Abschreibung",
+    "currentValueAfterDepreciationByAsset": "Aktueller Wert nach Abschreibung nach Anlage",
+    "close": "Schließen",
+    "total": "Gesamt",
+    "noAssetsFound": "Keine Anlagen gefunden",
     "activeAssets": "aktive Anlagen",
     "disposedAssets": "entsorgte Anlagen",
     "totalAssets": "Anlagen insgesamt",
