--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -234,7 +234,11 @@
     "purchaseCostIsRequired": "Purchase cost is required",
     "parentAssetIsRequired": "Parent asset is required",
     "purchaseByIsRequired": "Purchase by is required",
-    "expiryDateIsRequired": "Expiry date is required"
+    "expiryDateIsRequired": "Expiry date is required",
+    "expiryDateCannotBeSameAsPurchaseDate": "Expiry date cannot be the same as purchase date",
+    "expiryDateCannotBeBeforePurchaseDate": "Expiry date cannot be before purchase date",
+    "purchaseDateCannotBeSameAsExpiryDate": "Purchase date cannot be the same as expiry date",
+    "atLeastOneVendorRequired": "At least one vendor (Product or Service) is required"
   },
   "assetTypes": {
     "title": "Asset Types",
@@ -430,6 +434,18 @@
     "totalPortfolioValue": "Total Portfolio Value",
     "averageAssetValue": "Average Asset Value",
     "currentValueAfterDepreciation": "Current Value After Depreciation",
+    "currentValueByAssetType": "Current Value by Asset Type",
+    "valueAfterDepreciationByAssetType": "Value After Depreciation by Asset Type",
+    "currentValue": "Current Value",
+    "valueAfterDepreciation": "Value After Depreciation",
+    "assetsByAssetType": "Assets by Asset Type",
+    "totalCurrentValue": "Total Current Value",
+    "totalValueAfterDepreciation": "Total Value After Depreciation",
+    "averageValueAfterDepreciation": "Average Value After Depreciation",
+    "currentValueAfterDepreciationByAsset": "Current Value After Depreciation by Asset",
+    "close": "Close",
+    "total": "Total",
+    "noAssetsFound": "No assets found",
     "activeAssets": "active assets",
     "disposedAssets": "disposed assets",
     "totalAssets": "total assets",
