pushing the fixes

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -357,6 +357,7 @@
     "history": "Verlauf",
     "approval": "Genehmigung",
     "supervisor": "Vorgesetzter",
+    "maintenanceList": "Wartungsliste",
     "workOrder": "Arbeitsauftrag",
     "maintenanceType": "Wartungstyp",
     "scheduledDate": "Geplantes Datum",
