--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -371,6 +371,7 @@
     "history": "History",
     "approval": "Approval",
     "supervisor": "Supervisor",
+    "maintenanceList": "Maintenance List",
     "workOrder": "Work Order",
     "maintenanceType": "Maintenance Type",
     "scheduledDate": "Scheduled Date",
@@ -1251,6 +1252,9 @@
     "notes": "Notes",
     "checklist": "Checklist",
     "viewChecklist": "View Checklist",
+    "assetMaintenanceChecklist": "Asset Maintenance Checklist",
+    "close": "Close",
+    "noChecklistItemsFound": "No checklist items found",
     "noActionRequiredFromYou": "No action required from you",
     "loadingApprovalDetails": "Loading approval details...",
     "loadingVendorDetails": "Loading vendor details...",
