Serial dropdown and Assets multiselect

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -76,6 +76,12 @@
     "assetType": "Anlagentyp",
     "assetTypeId": "Anlagentyp-ID",
     "serialNumber": "Seriennummer",
+    "serialNumberModeGenerateNew": "Neu generieren",
+    "serialNumberModeUseExisting": "Vorhandene verwenden",
+    "serialNumberModeNone": "Keine Seriennummer",
+    "serialNumberUseExistingPlaceholder": "Seriennummer scannen oder eingeben",
+    "serialNumberNoSerialHelper": "Diese Anlage wird ohne Seriennummer erstellt.",
+    "serialNumberScannedSuccessfully": "Seriennummer erfolgreich gescannt",
     "status": "Status",
     "currentStatus": "Aktueller Status",
     "department": "Abteilung",
@@ -101,6 +107,7 @@
     "inactive": "Inaktiv",
     "disposed": "Entsorgt",
     "pleaseSelectAssets": "Bitte wählen Sie Anlagen zum Löschen aus",
+    "pleaseSelectAssetsToDownload": "Bitte wählen Sie Anlagen zum Herunterladen aus",
     "assetsDeletedSuccessfully": "{{count}} Anlage(n) erfolgreich gelöscht",
     "assetDeletedSuccessfully": "Anlage erfolgreich gelöscht",
     "failedToDeleteAssets": "Fehler beim Löschen der Anlagen",
