--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -90,6 +90,12 @@
     "assetType": "Asset Type",
     "assetTypeId": "Asset Type ID",
     "serialNumber": "Serial Number",
+    "serialNumberModeGenerateNew": "Generate New",
+    "serialNumberModeUseExisting": "Use existing one",
+    "serialNumberModeNone": "No serial number",
+    "serialNumberUseExistingPlaceholder": "Scan or type serial number",
+    "serialNumberNoSerialHelper": "This asset will be created without a serial number.",
+    "serialNumberScannedSuccessfully": "Serial number scanned successfully",
     "status": "Status",
     "currentStatus": "Current Status",
     "department": "Department",
@@ -115,6 +121,7 @@
     "inactive": "Inactive",
     "disposed": "Disposed",
     "pleaseSelectAssets": "Please select assets to delete",
+    "pleaseSelectAssetsToDownload": "Please select assets to download",
     "assetsDeletedSuccessfully": "{{count}} asset(s) deleted successfully",
     "assetDeletedSuccessfully": "Asset deleted successfully",
     "failedToDeleteAssets": "Failed to delete assets",
