pushing code for bug fixes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1255,6 +1255,12 @@
     "assetMaintenanceChecklist": "Asset Maintenance Checklist",
     "close": "Close",
     "noChecklistItemsFound": "No checklist items found",
+    "batteryHealthCheck": "Battery Health Check",
+    "osAndSoftwareInstalled": "OS & Software Installed",
+    "physicalDamageInspection": "Physical Damage Inspection",
+    "physicalConditionCheck": "Physical Condition Check",
+    "accessibilityAndLabeling": "Accessibility & Labeling",
+    "pressureGaugeAndSealVerification": "Pressure Gauge & Seal Verification",
     "noActionRequiredFromYou": "No action required from you",
     "loadingApprovalDetails": "Loading approval details...",
     "loadingVendorDetails": "Loading vendor details...",
