Asset and Asset Type Parent/Child

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -131,6 +131,7 @@
     "assetsExportedSuccessfully": "Assets exported successfully",
     "failedToExportAssets": "Failed to export assets",
     "addAssetFormOpened": "Add Asset Form Opened",
+    "noChildAssets": "No child assets",
     "configuration": "Configuration",
     "attachments": "Attachments",
     "purchaseDetails": "Purchase Details",
@@ -288,6 +289,7 @@
     "assetTypesExportedSuccessfully": "Asset types exported successfully",
     "failedToExportAssetTypes": "Failed to export asset types",
     "exportFailed": "Export failed",
+    "noChildTypes": "No child asset types",
     "typeName": "Type Name",
     "typeCode": "Type Code",
     "category": "Category",
