--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -117,6 +117,7 @@
     "assetsExportedSuccessfully": "Anlagen erfolgreich exportiert",
     "failedToExportAssets": "Fehler beim Exportieren der Anlagen",
     "addAssetFormOpened": "Anlage-Hinzufügen-Formular geöffnet",
+    "noChildAssets": "Keine Unteranlagen",
     "configuration": "Konfiguration",
     "attachments": "Anhänge",
     "purchaseDetails": "Kaufdetails",
@@ -274,6 +275,7 @@
     "assetTypesExportedSuccessfully": "Anlagentypen erfolgreich exportiert",
     "failedToExportAssetTypes": "Fehler beim Exportieren der Anlagentypen",
     "exportFailed": "Export fehlgeschlagen",
+    "noChildTypes": "Keine Unteranlagentypen",
     "typeName": "Typname",
     "typeCode": "Typcode",
     "category": "Kategorie",
