commiting the group id column changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -114,6 +114,7 @@
     "location": "Location",
     "parentId": "Parent ID",
     "groupId": "Group ID",
+    "groupName": "Group Name",
     "maintenanceScheduleId": "Maintenance Schedule ID",
     "productServiceId": "Product/Service ID",
     "extId": "Ext ID",
