--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -100,6 +100,7 @@
     "location": "Standort",
     "parentId": "Übergeordnete ID",
     "groupId": "Gruppen-ID",
+    "groupName": "Gruppenname",
     "maintenanceScheduleId": "Wartungsplan-ID",
     "productServiceId": "Produkt/Service-ID",
     "extId": "Externe ID",
