commtiitng the manual maint changes

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -1328,6 +1328,11 @@
     "days": "Tage",
     "dueToday": "Heute fällig",
     "overdue": "Überfällig",
+    "createManualMaintenance": "Manuelle Wartung erstellen",
+    "createMaintenance": "Wartung erstellen",
+    "pleaseSelectAsset": "Bitte wählen Sie eine Anlage",
+    "maintenanceCreatedSuccessfully": "Wartung erfolgreich erstellt",
+    "failedToCreateMaintenance": "Wartung konnte nicht erstellt werden",
     "updateMaintenanceSchedule": "Wartungsplan aktualisieren",
     "backToSupervisorApprovals": "Zurück zu Supervisor-Genehmigungen",
     "maintenanceChecklist": "Wartungs-Checkliste",
@@ -1923,6 +1928,7 @@
     "view": "Anzeigen",
     "add": "Hinzufügen",
     "create": "Erstellen",
+    "creating": "Wird erstellt...",
     "update": "Aktualisieren",
     "search": "Suchen",
     "filter": "Filtern",
