--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1371,6 +1371,11 @@
     "days": "days",
     "dueToday": "Due today",
     "overdue": "Overdue",
+    "createManualMaintenance": "Create Manual Maintenance",
+    "createMaintenance": "Create Maintenance",
+    "pleaseSelectAsset": "Please select an asset",
+    "maintenanceCreatedSuccessfully": "Maintenance created successfully",
+    "failedToCreateMaintenance": "Failed to create maintenance",
     "updateMaintenanceSchedule": "Update Maintenance Schedule",
     "backToSupervisorApprovals": "Back to Supervisor Approvals",
     "maintenanceChecklist": "Maintenance Checklist",
@@ -1975,6 +1980,7 @@
     "view": "View",
     "add": "Add",
     "create": "Create",
+    "creating": "Creating...",
     "update": "Update",
     "search": "Search",
     "filter": "Filter",
