--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1736,6 +1736,12 @@
       "subtitle": "Manage scrap sales and asset disposal",
       "saleId": "Sale ID",
       "saleTitle": "Sale Title",
+      "status": "Status",
+      "statusApprovalPending": "Approval Pending",
+      "statusInitiated": "Initiated",
+      "statusInProgress": "In Progress",
+      "statusCompleted": "Completed",
+      "statusCancelled": "Cancelled",
       "buyerName": "Buyer Name",
       "buyerCompany": "Buyer Company",
       "buyerPhone": "Buyer Phone",
