adding reason for delay

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -597,6 +597,10 @@
       "workOrderStatus": "Arbeitsauftragsstatus",
       "maintenanceType": "Wartungstyp",
       "downtime": "Ausfallzeit (h)",
+      "standardHours": "Std. Std.",
+      "actualHours": "Tats. Std.",
+      "variance": "Abweichung",
+      "maintenanceRemarks": "Wartungsanmerkungen",
       "workflowStep": "Workflow-Schritt",
       "plannedScheduleDate": "Geplantes Termin",
       "actualScheduleDate": "Tatsächliches Termin",
@@ -1425,7 +1429,21 @@
     "statusIsRequired": "Status ist erforderlich",
     "costIsRequired": "Wartungskosten sind erforderlich",
     "maintenanceScheduleUpdatedSuccessfully": "Wartungsplan erfolgreich aktualisiert!",
-    "failedToUpdateMaintenanceSchedule": "Fehler beim Aktualisieren des Wartungsplans"
+    "failedToUpdateMaintenanceSchedule": "Fehler beim Aktualisieren des Wartungsplans",
+    "standardHoursRequired": "Standard-Stunden erforderlich",
+    "actualHoursSpent": "Tatsächliche Stunden aufgewendet",
+    "standardHours": "Std. Std.",
+    "actualHours": "Tats. Std.",
+    "variance": "Abweichung",
+    "enterHours": "Gesamte aufgewendete Stunden eingeben",
+    "hoursSpentIsRequired": "Aufgewendete Stunden sind erforderlich",
+    "presetInMaintTypeConfig": "In der Wartungstyp-Konfiguration voreingestellt",
+    "reasonForDelay": "Grund für die Verzögerung",
+    "maintenanceNotesOptional": "Wartungshinweise (Optional)",
+    "explainWhyLonger": "Bitte erklären Sie, warum die Wartung länger als geschätzt gedauert hat...",
+    "enterMaintRemarks": "Geben Sie wartungsspezifische Anmerkungen ein...",
+    "maintNotesMandatoryDelay": "🚨 Dieses Feld ist obligatorisch, da die aufgewendete Zeit die Schätzung überschritten hat!",
+    "pleaseFillAllRequiredFields": "Bitte füllen Sie alle erforderlichen Felder aus"
   },
     "serialNumberPrint": {
       "title": "Seriennummern-Druck",
