--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -612,6 +612,10 @@
       "workOrderStatus": "Work Order Status",
       "maintenanceType": "Maintenance Type",
       "downtime": "Downtime (h)",
+      "standardHours": "Std Hours",
+      "actualHours": "Act Hours",
+      "variance": "Variance",
+      "maintenanceRemarks": "Maint Remarks",
       "workflowStep": "Workflow Step",
       "plannedScheduleDate": "Planned Schedule Date",
       "actualScheduleDate": "Actual Schedule Date",
@@ -1476,7 +1480,20 @@
     "invoiceIsRequired": "Invoice number is required",
     "emailIsRequired": "Email is required",
     "costIsRequired": "Maintenance cost is required",
-    "invalidEmailFormat": "Please enter a valid email address"
+    "invalidEmailFormat": "Please enter a valid email address",
+    "standardHoursRequired": "Standard Hours Required",
+    "actualHoursSpent": "Actual Hours Spent",
+    "standardHours": "Std Hours",
+    "actualHours": "Act Hours",
+    "variance": "Variance",
+    "enterHours": "Enter total hours spent",
+    "hoursSpentIsRequired": "Hours spent is required",
+    "presetInMaintTypeConfig": "Pre-set in Maintenance Type configuration",
+    "reasonForDelay": "Reason for Delay",
+    "maintenanceNotesOptional": "Maintenance Notes (Optional)",
+    "explainWhyLonger": "Please explain why the maintenance took longer than estimated...",
+    "enterMaintRemarks": "Enter any maintenance specific remarks...",
+    "maintNotesMandatoryDelay": "🚨 This field is mandatory because the time spent exceeded the estimate!"
   },
     "serialNumberPrint": {
       "title": "Serial Number Print",
