commiting multilingual changes

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -296,8 +296,8 @@
     "requireMaintenance": "Wartung erforderlich",
     "selectMaintenanceType": "Wartungstyp auswählen",
     "selectMaintenanceTypeOption": "Wartungstyp auswählen",
-    "maintenanceLeadType": "Wartungsleiter-Typ",
-    "enterMaintenanceLeadType": "Wartungsleiter-Typ eingeben",
+    "maintenanceLeadType": "Wartungsvorlaufzeit",
+    "enterMaintenanceLeadType": "Wartungsvorlaufzeit eingeben",
     "maintenanceFrequency": "Wartungshäufigkeit",
     "enterMaintenanceFrequency": "Häufigkeit eingeben (z.B. 30, 90, 180)",
     "unitOfMeasure": "Maßeinheit (UOM)",
