adding inspection changes

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1229,8 +1229,10 @@
     "serialNumber": "Serial Number",
     "scheduledDate": "Scheduled Date",
     "vendor": "Vendor",
+    "department": "Department",
     "employee": "Employee",
     "maintenanceType": "Maintenance Type",
+    "status": "Status",
     "daysUntilDue": "Days Until Due",
     "failedToFetchMaintenanceApprovals": "Failed to fetch maintenance approvals",
     "pleaseSelectMaintenanceRecords": "Please select maintenance records to delete",
