--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -641,7 +641,66 @@
     "groupName": "Gruppenname",
     "groupCode": "Gruppencode",
     "groupType": "Gruppentyp",
-    "members": "Mitglieder"
+    "members": "Mitglieder",
+    "createGroupAsset": {
+      "failedToLoadDocumentTypes": "Fehler beim Laden der Dokumenttypen",
+      "failedToFetchAssetTypes": "Fehler beim Abrufen der Anlagentypen",
+      "failedToFetchAssets": "Fehler beim Abrufen der Anlagen",
+      "pleaseEnterGroupName": "Bitte geben Sie einen Gruppennamen ein",
+      "pleaseSelectAssetType": "Bitte wählen Sie einen Anlagentyp aus",
+      "pleaseSelectAtLeastOneAsset": "Bitte wählen Sie mindestens eine Anlage aus",
+      "assetGroupCreatedSuccessfully": "Anlagengruppe erfolgreich erstellt!",
+      "failedToCreateAssetGroup": "Fehler beim Erstellen der Anlagengruppe",
+      "addAtLeastOneFile": "Mindestens eine Datei hinzufügen",
+      "selectDocumentTypeAndChooseFile": "Dokumenttyp auswählen und eine Datei für alle Zeilen wählen",
+      "enterCustomNameFor": "Benutzerdefinierten Namen für {{docType}} Dokumente eingeben",
+      "allFilesProcessedSuccessfully": "Alle Dateien erfolgreich verarbeitet. Sie werden hochgeladen, wenn Sie die Anlagengruppe speichern.",
+      "filesProcessed": "{{successCount}} Dateien verarbeitet, {{failCount}} fehlgeschlagen",
+      "failedToProcessAnyFiles": "Fehler beim Verarbeiten von Dateien",
+      "processFailed": "Verarbeitung fehlgeschlagen",
+      "selectAssetType": "Anlagentyp auswählen",
+      "groupName": "Gruppenname",
+      "enterGroupName": "Gruppenname eingeben",
+      "assetsList": "Anlagenliste",
+      "searchAssetTypes": "Anlagentypen suchen...",
+      "loadingAssetTypes": "Anlagentypen werden geladen...",
+      "noAssetTypesFound": "Keine Anlagentypen gefunden",
+      "createNewAssetType": "Neuen Anlagentyp erstellen",
+      "loadingAssets": "Anlagen werden geladen...",
+      "noAssetsFoundForSelectedType": "Keine Anlagen für den ausgewählten Anlagentyp gefunden",
+      "pleaseSelectAssetTypeToViewAssets": "Bitte wählen Sie einen Anlagentyp aus, um Anlagen anzuzeigen",
+      "assetId": "Anlagen-ID",
+      "name": "Anlagenname",
+      "description": "Beschreibung",
+      "purchasedOn": "Gekauft am",
+      "addOneAsset": "Eine Anlage hinzufügen",
+      "addAllAssets": "Alle Anlagen hinzufügen",
+      "removeOneAsset": "Eine Anlage entfernen",
+      "removeAllAssets": "Alle Anlagen entfernen",
+      "addAll": "Alle hinzufügen",
+      "removeAll": "Alle entfernen",
+      "selectedAssets": "Ausgewählte Anlagen",
+      "searchSelectedAssets": "Ausgewählte Anlagen suchen...",
+      "documents": "Dokumente",
+      "documentTypesLoadedFromSystem": "Dokumenttypen werden aus der Systemkonfiguration geladen",
+      "uploadDocuments": "Dokumente hochladen",
+      "addDocument": "Dokument hinzufügen",
+      "noDocumentsAdded": "Keine Dokumente hinzugefügt.",
+      "documentType": "Dokumenttyp",
+      "selectType": "Typ auswählen",
+      "searchTypes": "Typen suchen...",
+      "customName": "Benutzerdefinierter Name",
+      "fileMaxSize": "Datei (Max. 10MB)",
+      "chooseFile": "Datei wählen",
+      "preview": "Vorschau",
+      "remove": "Entfernen",
+      "processing": "Verarbeitung...",
+      "processAllFiles": "Alle Dateien verarbeiten",
+      "fileSizeExceedsLimit": "Dateigröße überschreitet das 15MB Limit",
+      "totalAssetsSelected": "Insgesamt ausgewählte Anlagen: {{count}}",
+      "cancel": "Abbrechen",
+      "save": "Speichern"
+    }
   },
  
  
@@ -2147,7 +2206,7 @@
         "noAssetsFoundForSelectedType": "Keine Anlagen für den ausgewählten Anlagentyp gefunden",
         "pleaseSelectAssetTypeToViewAssets": "Bitte wählen Sie einen Anlagentyp aus, um Anlagen anzuzeigen",
         "assetId": "Anlagen-ID",
-        "name": "Name",
+        "name": "Anlagenname",
         "description": "Beschreibung",
         "purchasedOn": "Gekauft am",
         "addOneAsset": "Eine Anlage hinzufügen",
@@ -2174,7 +2233,7 @@
         "processing": "Verarbeitung...",
         "processAllFiles": "Alle Dateien verarbeiten",
         "fileSizeExceedsLimit": "Dateigröße überschreitet das 15MB Limit",
-        "totalAssetsSelected": "Gesamte ausgewählte Anlagen",
+        "totalAssetsSelected": "Insgesamt ausgewählte Anlagen: {{count}}",
         "cancel": "Abbrechen",
         "save": "Speichern"
       },
