--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1229,6 +1229,7 @@
     "serialNumber": "Serial Number",
     "scheduledDate": "Scheduled Date",
     "vendor": "Vendor",
+    "technicianDetails": "Technician Details",
     "department": "Department",
     "employee": "Employee",
     "maintenanceType": "Maintenance Type",
